basic styles for comments

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Lesson 2 Example</title>
     <script src="https://code.angularjs.org/1.2.2/angular.js"></script>
     <script src="comments.annotated.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/comments.css">
 
   </head>
   <body >
-  <comments>
-  <p ng-repeat="comment in comments">{{comment.text}}</p>
-
-</comments>
+    <div class="main">
+      <comments></comments>
+    </div>
   </body>
 </html>
