--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://code.angularjs.org/1.2.2/angular.js"></script>
   <script src="//code.angularjs.org/1.2.2/angular-sanitize.min.js"></script>
   <script src="javascript/third-party/markdown.min.js"></script>
+  <script src="//code.angularjs.org/1.2.29/angular-route.min.js"></script>
   <!-- Firebase -->
   <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
   <!-- AngularFire -->
