set up initial home and login routes

--- a/comments.html
+++ b/comments.html
@@ -6,5 +6,6 @@
     <textarea ng-model="commentMd">
     </textarea>
     <button ng-click="post()">Post Your Comment</button>
+    <a href="/#/login">Login</a>
   </div>
 </div>
