--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 </head>
 <body >
   <div class="main">
-    <comments></comments>
+  <div class="comment-header">
+    <h2>Leave a comment</h2>
+  </div>
+  <div ng-view></div>
   </div>
 </body>
 </html>
