user oauth with facebook appears to be working

--- a/login.html
+++ b/login.html
@@ -1,1 +1,11 @@
-<div>log in page man</div>
+<div class="login">
+  <h3>Log in to leave a comment</h3>
+  <div class="twitter" ng-click="UserAuth.login('twitter')">
+    <i class="fa fa-twitter"></i>
+    <span>Log in with Twitter</span>
+  </div>
+  <div class="facebook" ng-click="UserAuth.login('facebook')">
+    <i class="fa fa-facebook"></i>
+    <span>Log in with Facebook</span>
+  </div>
+</div>
