--- a/karma.html
+++ b/karma.html
@@ -1,5 +1,5 @@
 <div class="karma">
-  <p>Created by {{ poster.username }} with {{ points }} points.</p>
+  <p>Created by {{ poster.displayName }} with {{ points }} points.</p>
   <div class="voting" ng-show="canVote()">
   <a href="/" ng-click="upvote()">Upvote</a>
     <a href="/" ng-click="downvote()">Downvote</a>
