--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lesson 2 Example</title>
-  <script src="https://code.angularjs.org/1.2.2/angular.js"></script>
+  <script src="https://code.angularjs.org/1.2.2/angular.min.js"></script>
   <script src="//code.angularjs.org/1.2.2/angular-sanitize.min.js"></script>
-  <script src="javascript/third-party/markdown.min.js"></script>
   <script src="//code.angularjs.org/1.2.29/angular-route.min.js"></script>
+   <script src="javascript/third-party/markdown.min.js"></script>
   <!-- Firebase -->
   <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
   <!-- AngularFire -->
