--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lesson 2 Example</title>
-  <script src="https://code.angularjs.org/1.2.2/angular.min.js"></script>
-  <script src="//code.angularjs.org/1.2.2/angular-sanitize.min.js"></script>
-  <script src="//code.angularjs.org/1.2.29/angular-route.min.js"></script>
-   <script src="javascript/third-party/markdown.min.js"></script>
-  <!-- Firebase -->
-  <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-  <!-- AngularFire -->
-  <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
-  <script src="javascript/comments.annotated.js"></script>
+  
   <link rel="stylesheet" type="text/css" href="css/comments.css">
 
 </head>
 <body >
   <div class="main">
-  <div class="comment-header">
-    <h2>Leave a comment</h2>
+  <div class="main-view" ng-view></div>
   </div>
-  <div ng-view></div>
-  </div>
+
+  <script src="https://code.angularjs.org/1.2.2/angular.min.js"></script>
+  <script src="//code.angularjs.org/1.2.2/angular-sanitize.min.js"></script>
+  <script src="//code.angularjs.org/1.2.2/angular-route.min.js"></script>
+    <script src="//code.angularjs.org/1.2.2/angular-animate.min.js"></script>
+   <script src="javascript/third-party/markdown.min.js"></script>
+
+  <!-- Firebase -->
+  <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+  <!-- AngularFire -->
+  <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+  <script src="javascript/comments.annotated.js"></script>
 </body>
 </html>
